--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -56,6 +56,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@color/redButtonBg</item>
+        <item name="android:textAllCaps">false</item>
         <item name="fontFamily">@font/avenir_regular</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:padding">@dimen/dimen_size_5</item>
