--- a/app/src/main/res/layout/wt_pager_layout.xml
+++ b/app/src/main/res/layout/wt_pager_layout.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".screens.walkthrough.PagerFragment">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/img_pager_data"
@@ -16,6 +15,7 @@
     <TextView
         android:id="@+id/txt_pager_data"
         style="@style/BasicText"
+        android:lineSpacingExtra="@dimen/dimen_size_5"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="@dimen/dimen_size_60"
