--- a/app/src/main/res/drawable/ic_right.xml
+++ b/app/src/main/res/drawable/ic_right.xml
@@ -1,16 +1,8 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="18dp"
-    android:height="33dp"
-    android:viewportWidth="18"
-    android:viewportHeight="33">
-  <path
-      android:pathData="M1,1l16,15.5l-16,15.5"
-      android:strokeAlpha="0.6"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#FFFFFF"
-      android:fillType="evenOdd"
-      android:fillAlpha="0.6"
-      android:strokeLineCap="round"/>
+<vector android:height="16.5dp" android:viewportHeight="33"
+    android:viewportWidth="18" android:width="9dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillAlpha="0.6" android:fillColor="#00000000"
+        android:fillType="evenOdd"
+        android:pathData="M1,1l16,15.5l-16,15.5"
+        android:strokeAlpha="0.6" android:strokeColor="#FFFFFF"
+        android:strokeLineCap="round" android:strokeLineJoin="round" android:strokeWidth="2"/>
 </vector>
