--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -50,5 +50,6 @@
     <dimen name="dimen_size_60">60dp</dimen>
     <dimen name="dimen_size_350">350dp</dimen>
     <dimen name="text_size_16">16sp</dimen>
+    <dimen name="dimen_size_4">4dp</dimen>
 
 </resources>
