--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,103 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".screens.home.fragments.home.HomeFragment">
+    android:layout_height="match_parent">
 
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/dimen_size_350"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/home_header_bg"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_height="match_parent"
+        tools:context=".screens.home.fragments.home.HomeFragment">
 
-        <TextView
-            style="@style/BasicText"
-            android:fontFamily="@font/avenir_light"
-            android:letterSpacing="0.1"
-            android:text="Good Morning!"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_size_30" />
 
         <ImageView
-            android:layout_width="@dimen/dimen_size_100"
-            android:layout_height="@dimen/dimen_size_100"
-            android:layout_marginTop="@dimen/dimen_size_30"
-            android:src="@drawable/avatar" />
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dimen_size_350"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/home_header_bg"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <RelativeLayout
-            android:layout_marginBottom="@dimen/dimen_size_10"
-            android:paddingStart="@dimen/dimen_size_20"
-            android:paddingEnd="@dimen/dimen_size_20"
+        <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_size_20">
-
-            <ImageView
-                android:id="@+id/img_previous_week"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/dimen_size_10"
-                android:src="@drawable/ic_left" />
+            android:gravity="center"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
             <TextView
-                android:id="@+id/txt_month_name"
                 style="@style/BasicText"
-                android:layout_centerInParent="true"
                 android:fontFamily="@font/avenir_light"
-                android:letterSpacing="0.2"
-                android:text="February"
-                android:textAllCaps="true"
-                android:textColor="@color/white" />
+                android:letterSpacing="0.1"
+                android:text="Good Morning!"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_30" />
 
             <ImageView
-                android:id="@+id/img_next_week"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/dimen_size_100"
+                android:layout_height="@dimen/dimen_size_100"
+                android:layout_marginTop="@dimen/dimen_size_30"
+                android:src="@drawable/avatar" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:padding="@dimen/dimen_size_10"
-                android:src="@drawable/ic_right" />
+                android:layout_marginTop="@dimen/dimen_size_20"
+                android:layout_marginBottom="@dimen/dimen_size_10"
+                android:paddingStart="@dimen/dimen_size_20"
+                android:paddingEnd="@dimen/dimen_size_20">
 
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/img_previous_week"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/dimen_size_10"
+                    android:src="@drawable/ic_left" />
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/txt_month_name"
+                    style="@style/BasicText"
+                    android:layout_centerInParent="true"
+                    android:fontFamily="@font/avenir_light"
+                    android:letterSpacing="0.2"
+                    android:text="February"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white" />
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+                <ImageView
+                    android:id="@+id/img_next_week"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:padding="@dimen/dimen_size_10"
+                    android:src="@drawable/ic_right" />
 
-        <include layout="@layout/layout_calendar" />
+            </RelativeLayout>
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <ImageView
-        android:layout_width="@dimen/dimen_size_50"
-        android:layout_height="@dimen/dimen_size_50"
-        android:layout_margin="@dimen/dimen_size_20"
-        android:src="@drawable/add"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <LinearLayout
+            android:id="@+id/linearLayout3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <include layout="@layout/layout_calendar" />
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_events"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+
+        <ImageView
+            android:layout_width="@dimen/dimen_size_50"
+            android:layout_height="@dimen/dimen_size_50"
+            android:layout_margin="@dimen/dimen_size_20"
+            android:src="@drawable/add"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.core.widget.NestedScrollView>
