--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,6 +8,7 @@
     tools:context=".screens.home.HomeActivity">
 
     <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/home_drawer_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,45 +21,25 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-
             <FrameLayout
                 android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <RelativeLayout
-                android:id="@+id/rel_actionbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:elevation="1dp">
-
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/transparent" />
-
-
-                <TextView
-                    android:id="@+id/txt_toolbar_title"
-                    style="@style/BasicText"
-                    android:layout_centerInParent="true"
-                    android:textSize="@dimen/text_size_18"
-                    tools:text="Dummy Title" />
-            </RelativeLayout>
-
         </RelativeLayout>
 
         <com.google.android.material.navigation.NavigationView
-            android:id="@+id/navigation"
+            android:id="@+id/home_navigation"
+            style="@style/NavigationDrawerStyle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
+            android:background="@color/white"
             android:elevation="1dp"
             android:fitsSystemWindows="true"
-            android:theme="@style/NavigationDrawerStyle"
             app:headerLayout="@layout/home_drawer_header_layout"
+            app:itemBackground="@drawable/underline_bg"
+            app:itemTextAppearance="@style/HomeDrawerItemText"
             app:menu="@menu/home_nav_drawer_layout" />
 
     </androidx.drawerlayout.widget.DrawerLayout>
