--- a/app/src/main/res/layout/dialog_bottom_events.xml
+++ b/app/src/main/res/layout/dialog_bottom_events.xml
@@ -19,11 +19,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/img_close"
-        android:layout_width="@dimen/dimen_size_20"
-        android:layout_height="@dimen/dimen_size_20"
+        android:id="@+id/img_add_event"
+        android:layout_width="@dimen/dimen_size_30"
+        android:layout_height="@dimen/dimen_size_30"
         android:layout_margin="@dimen/dimen_size_10"
-        android:src="@drawable/ic_close"
+        android:src="@drawable/add"
         app:layout_constraintBottom_toBottomOf="@+id/txt_dialog_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/txt_dialog_title" />
@@ -33,22 +33,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_dialog_title"
+        android:layout_marginTop="@dimen/dimen_size_20"
         android:clipToPadding="false"
         android:paddingBottom="@dimen/dimen_size_100"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_dialog_title" />
-
-    <ImageView
-        android:id="@+id/img_add_event"
-        android:layout_width="@dimen/dimen_size_30"
-        android:layout_height="@dimen/dimen_size_30"
-        android:layout_margin="@dimen/dimen_size_5"
-        android:elevation="1dp"
-        android:src="@drawable/add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/txt_no_data"
