--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,14 @@
         android:layout_height="match_parent"
         tools:context=".screens.home.fragments.home.HomeFragment">
 
+        <com.enlife.app.screens.widgets.CustomActionBar
+            android:id="@+id/action_bar"
+            android:elevation="@dimen/dimen_size_1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <ImageView
             android:id="@+id/imageView"
