--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,7 @@
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="action_bar_height">48dp</dimen>
 
-    <dimen name="dimen_size_0_5">.5dp</dimen>
+    <dimen name="dimen_size_0_5">0.5dp</dimen>
     <dimen name="text_size_10">10sp</dimen>
     <dimen name="text_size_18">18sp</dimen>
     <dimen name="text_size_20">20sp</dimen>
@@ -51,5 +51,6 @@
     <dimen name="dimen_size_350">350dp</dimen>
     <dimen name="text_size_16">16sp</dimen>
     <dimen name="dimen_size_4">4dp</dimen>
+    <dimen name="dimen_size_280">280dp</dimen>
 
 </resources>
