--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
     <style name="Theme.EnLife" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
         <item name="colorPrimary">@color/redButtonBg</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="listPreferredItemHeightSmall">@dimen/dimen_size_60</item>
+    </style>
+
+    <style name="Theme.EnLife.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="listPreferredItemHeightSmall">@dimen/dimen_size_60</item>
     </style>
 
     <style name="CustomActionBar" parent="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -21,25 +26,15 @@
         <item name="windowActionBarOverlay">false</item>
     </style>
 
-    <style name="Theme.EnLife.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="windowNoTitle">true</item>
-        <item name="windowActionBar">false</item>
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-    </style>
-
     <style name="HomeDrawerItemText" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:background">@drawable/underline_bg</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">@font/avenir_regular</item>
-        <item name="android:padding">@dimen/dimen_size_30</item>
         <item name="android:textSize">@dimen/text_size_18</item>
         <item name="android:textStyle">normal</item>
     </style>
 
     <style name="NavigationDrawerStyle" parent="Widget.Design.NavigationView">
-        <item name="android:listDivider">@drawable/underline_bg</item>
         <item name="android:fontFamily">@font/avenir_light</item>
         <item name="android:textSize">@dimen/text_size_16</item>
     </style>
@@ -65,6 +60,16 @@
         <item name="android:fontFamily">@font/avenir_regular</item>
         <item name="android:padding">@dimen/dimen_size_5</item>
         <item name="android:textSize">@dimen/text_size_15</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="ToolbarTitleText" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:background">@null</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/avenir_regular</item>
+        <item name="android:padding">@dimen/dimen_size_5</item>
+        <item name="android:textSize">@dimen/text_size_18</item>
         <item name="android:textStyle">normal</item>
     </style>
 
