--- a/app/src/main/res/layout/fragment_goal_management.xml
+++ b/app/src/main/res/layout/fragment_goal_management.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
+        android:paddingBottom="@dimen/dimen_size_20"
         tools:context=".screens.home.fragments.goals.GoalManagementFragment">
 
         <ImageView
@@ -73,10 +74,10 @@
 
         <RadioGroup
             android:id="@+id/rg_goal_type"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dimen_size_20"
             android:layout_marginTop="@dimen/dimen_size_10"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_goal_type">
 
             <RadioButton
@@ -103,15 +104,54 @@
                 android:layout_margin="@dimen/dimen_size_5"
                 android:text="@string/weekly" />
 
-            <RadioButton
-                android:id="@+id/rb_custom"
-                style="@style/BasicText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dimen_size_5"
-                android:text="@string/custom" />
-
         </RadioGroup>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/lin_goal_type_duration"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/dimen_size_50"
+            app:layout_constraintBottom_toBottomOf="@+id/rg_goal_type"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/rg_goal_type"
+            app:layout_constraintTop_toTopOf="@+id/rg_goal_type">
+
+
+            <TextView
+                android:id="@+id/txt_from"
+                style="@style/BasicText"
+                android:fontFamily="@font/avenir_bold"
+                android:text="From:"
+                app:layout_constraintBottom_toTopOf="@+id/txt_to"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/txt_from_date"
+                style="@style/BasicText"
+                android:text="10/05/2021"
+                app:layout_constraintBottom_toBottomOf="@+id/txt_from"
+                app:layout_constraintStart_toEndOf="@+id/txt_from"
+                app:layout_constraintTop_toTopOf="@+id/txt_from" />
+
+            <TextView
+                android:id="@+id/txt_to"
+                style="@style/BasicText"
+                android:fontFamily="@font/avenir_bold"
+                android:text="To:"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/txt_to_date"
+                style="@style/BasicText"
+                android:text="10/05/2021"
+                app:layout_constraintBottom_toBottomOf="@+id/txt_to"
+                app:layout_constraintStart_toEndOf="@+id/txt_from"
+                app:layout_constraintTop_toTopOf="@+id/txt_to" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
             android:id="@+id/divider"
@@ -122,43 +162,45 @@
             app:layout_constraintTop_toBottomOf="@+id/rg_goal_type" />
 
         <TextView
-            android:id="@+id/txt_daily_schedule"
+            android:id="@+id/txt_goal_management"
             style="@style/BasicText"
-            android:layout_marginStart="@dimen/dimen_size_10"
             android:layout_marginTop="@dimen/dimen_size_20"
-            android:text="Daily events"
+            android:text="Goal Management"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_18"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/divider" />
 
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/switch_has_daily_events"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/dimen_size_20"
-            app:layout_constraintBottom_toBottomOf="@id/txt_daily_schedule"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/txt_daily_schedule" />
 
-        <LinearLayout
-            android:id="@+id/lin_time_slots"
+        <TextView
+            android:id="@+id/txt_task_note"
+            style="@style/BasicText"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_size_10"
-            android:orientation="vertical"
+            android:gravity="center"
+            android:paddingStart="@dimen/dimen_size_50"
+            android:paddingEnd="@dimen/dimen_size_50"
+            android:text="Plan your goal by creating tasks or milestones that you complete daily"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_daily_schedule">
-
-            <TextView
-                android:gravity="center"
-                android:text="Please select one of the following slots to add events for this goal"
-                style="@style/BasicText"/>
+            app:layout_constraintTop_toBottomOf="@+id/txt_goal_management" />
 
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_tasks"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_size_20"
+            app:layout_constraintTop_toBottomOf="@+id/txt_task_note" />
 
-        </LinearLayout>
+        <Button
+            style="@style/BasicButton"
+            android:layout_marginTop="@dimen/dimen_size_20"
+            android:minHeight="@dimen/dimen_size_30"
+            android:text="@string/add_task"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recycler_tasks" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
