--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/login_bg"
-    tools:context=".screens.login.LoginActivity">
+    tools:context=".screens.main.fragments.login.LoginActivity">
 
 
     <ImageView
