--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,9 +8,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".screens.home.fragments.home.HomeFragment">
+        tools:context=".screens.main.fragments.home.HomeFragment">
 
-        <com.enlife.app.screens.widgets.CustomActionBar
+        <com.enlife.app.screens.widgets.CustomAppBar
             android:id="@+id/action_bar"
             android:elevation="@dimen/dimen_size_1"
             app:layout_constraintEnd_toEndOf="parent"
