--- a/app/src/main/res/layout/toolbar_common.xml
+++ b/app/src/main/res/layout/toolbar_common.xml
@@ -16,8 +16,7 @@
             android:id="@+id/img_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            tools:src="@drawable/ic_close" />
+            android:layout_gravity="start" />
 
         <TextView
             android:id="@+id/txt_toolbar_title"
