--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -52,5 +52,6 @@
     <dimen name="text_size_16">16sp</dimen>
     <dimen name="dimen_size_4">4dp</dimen>
     <dimen name="dimen_size_280">280dp</dimen>
+    <dimen name="dimen_size_0">0dp</dimen>
 
 </resources>
