UI completed for: - add goal - add milestone - add task

--- a/app/src/main/res/layout/dialog_bottom_events.xml
+++ b/app/src/main/res/layout/dialog_bottom_events.xml
@@ -11,7 +11,7 @@
         style="@style/BasicText"
         android:layout_centerHorizontal="true"
         android:layout_margin="@dimen/dimen_size_10"
-        android:text="@string/events_for"
+        android:text="@string/schedule_for"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size_18"
         app:layout_constraintEnd_toEndOf="parent"
