--- a/app/src/main/res/layout/fragment_goal_management.xml
+++ b/app/src/main/res/layout/fragment_goal_management.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:paddingBottom="@dimen/dimen_size_20"
-            tools:context=".screens.main.fragments.goals.GoalManagementFragment">
+            tools:context=".screens.main.fragments.goals.addgoal.GoalManagementFragment">
 
             <ImageView
                 android:id="@+id/img_header"
