--- a/app/src/main/res/layout/dialog_add_event.xml
+++ b/app/src/main/res/layout/dialog_add_event.xml
@@ -12,8 +12,8 @@
     <TextView
         android:id="@+id/txt_associated_goal"
         style="@style/BasicText"
-        android:background="@color/greyText"
         android:layout_width="match_parent"
+        android:background="@color/greyText"
         android:fontFamily="@font/avenir_bold"
         android:paddingStart="@dimen/dimen_size_10"
         android:text="Goal: Finance" />
@@ -22,8 +22,8 @@
         android:id="@+id/txt_associated_milestone"
         style="@style/BasicText"
         android:layout_width="match_parent"
-        android:background="@color/greyText"
         android:layout_marginTop="@dimen/dimen_size_5"
+        android:background="@color/greyText"
         android:fontFamily="@font/avenir_bold"
         android:paddingStart="@dimen/dimen_size_10"
         android:text="Milestone: Cut expenses" />
@@ -55,14 +55,13 @@
         android:textColor="@color/black"
         android:textColorHint="@color/greyText" />
 
-
     <com.enlife.app.screens.widgets.TimeDurationChooserView
-        android:id="@+id/duration_chooser"
+        android:layout_marginTop="@dimen/dimen_size_20"
+        android:id="@+id/time_duration_chooser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/dimen_size_10" />
-
+        android:layout_marginStart="@dimen/dimen_size_20" />
 
     <Button
         android:id="@+id/btn_add_event"
