--- a/app/src/main/res/layout/dialog_add_milestone.xml
+++ b/app/src/main/res/layout/dialog_add_milestone.xml
@@ -42,7 +42,7 @@
         android:gravity="center">
 
         <com.enlife.app.screens.widgets.DateDurationChooserView
-            android:id="@+id/duration_chooser"
+            android:id="@+id/time_duration_chooser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal" />
