--- a/app/src/main/res/layout/dialog_add_milestone.xml
+++ b/app/src/main/res/layout/dialog_add_milestone.xml
@@ -1,81 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <com.enlife.app.screens.widgets.CustomToolbar
-        android:id="@+id/action_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <EditText
-        android:id="@+id/edt_milestone_title"
-        style="@style/BasicEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/editext_bg"
-        android:hint="@string/enter_title"
-        android:maxLines="2"
-        android:singleLine="false"
-        android:textColor="@color/black"
-        android:textColorHint="@color/greyText" />
-
-
-    <EditText
-        android:id="@+id/edt_milestone_description"
-        style="@style/BasicEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimen_size_10"
-        android:background="@drawable/editext_bg"
-        android:hint="@string/enter_description"
-        android:maxLines="5"
-        android:singleLine="false"
-        android:textColor="@color/black"
-        android:textColorHint="@color/greyText" />
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimen_size_10"
-        android:gravity="center">
+        android:orientation="vertical">
 
-        <com.enlife.app.screens.widgets.DateDurationChooserView
-            android:id="@+id/time_duration_chooser"
-            android:layout_width="wrap_content"
+        <com.enlife.app.screens.widgets.CustomToolbar
+            android:id="@+id/action_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/edt_milestone_title"
+            style="@style/BasicEditText"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
+            android:background="@drawable/editext_bg"
+            android:hint="@string/enter_title"
+            android:maxLines="2"
+            android:singleLine="false"
+            android:textColor="@color/black"
+            android:textColorHint="@color/greyText" />
+
+
+        <EditText
+            android:id="@+id/edt_milestone_description"
+            style="@style/BasicEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_size_10"
+            android:background="@drawable/editext_bg"
+            android:hint="@string/enter_description"
+            android:maxLines="5"
+            android:singleLine="false"
+            android:textColor="@color/black"
+            android:textColorHint="@color/greyText" />
 
         <LinearLayout
-            android:id="@+id/lin_add_event"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dimen_size_30"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_marginTop="@dimen/dimen_size_10"
+            android:gravity="center">
 
-            <ImageView
-                android:layout_width="@dimen/dimen_size_50"
-                android:layout_height="@dimen/dimen_size_50"
-                android:src="@drawable/add" />
+            <com.enlife.app.screens.widgets.DateDurationChooserView
+                android:id="@+id/time_duration_chooser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal" />
 
-            <TextView
-                style="@style/BasicText"
-                android:text="@string/add_event" />
+            <LinearLayout
+                android:id="@+id/lin_add_event"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dimen_size_30"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="@dimen/dimen_size_50"
+                    android:layout_height="@dimen/dimen_size_50"
+                    android:src="@drawable/add" />
+
+                <TextView
+                    style="@style/BasicText"
+                    android:text="@string/add_event" />
+
+            </LinearLayout>
 
         </LinearLayout>
+
+        <TextView
+            style="@style/BasicText"
+            android:layout_marginStart="@dimen/dimen_size_10"
+            android:layout_marginTop="@dimen/dimen_size_10"
+            android:fontFamily="@font/avenir_bold"
+            android:text="@string/events" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_events"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_size_20"
+            android:clipToPadding="false"
+            android:paddingBottom="@dimen/dimen_size_50" />
 
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_add_milstone"
+        android:id="@+id/btn_add_milestone"
         style="@style/BasicButton"
         android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/dimen_size_10"
         android:drawablePadding="0dp"
         android:minHeight="@dimen/dimen_size_30"
         android:text="@string/attach_this_ms_to_goal" />
-
-</LinearLayout>
+</RelativeLayout>
