--- a/app/src/main/res/layout/toolbar_common.xml
+++ b/app/src/main/res/layout/toolbar_common.xml
@@ -14,6 +14,7 @@
 
         <ImageView
             android:id="@+id/img_home"
+            android:src="@drawable/ic_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start" />
@@ -27,6 +28,7 @@
 
         <ImageView
             android:id="@+id/img_option"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
