--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -53,5 +53,6 @@
     <dimen name="dimen_size_4">4dp</dimen>
     <dimen name="dimen_size_280">280dp</dimen>
     <dimen name="dimen_size_0">0dp</dimen>
+    <dimen name="dimen_size_12">12dp</dimen>
 
 </resources>
