--- a/app/src/main/res/layout/item_event_list_layout.xml
+++ b/app/src/main/res/layout/item_event_list_layout.xml
@@ -6,23 +6,32 @@
     android:layout_height="wrap_content"
     android:padding="@dimen/dimen_size_5">
 
-    <ImageView
-        android:id="@+id/img_event"
+    <TextView
+        android:id="@+id/txt_event_index"
         android:layout_width="@dimen/dimen_size_50"
         android:layout_height="@dimen/dimen_size_50"
+        android:background="@drawable/circle_black_bg"
+        android:fontFamily="@font/avenir_bold"
+        android:gravity="center"
+        android:maxLength="2"
         android:src="@drawable/avatar"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_25"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="1" />
 
     <TextView
         android:id="@+id/txt_event_title"
         style="@style/BasicText"
-        android:layout_marginStart="@dimen/dimen_size_10"
+        android:layout_marginStart="@dimen/dimen_size_15"
         android:includeFontPadding="false"
         android:padding="0dp"
         android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@+id/img_event"
+        android:textSize="@dimen/text_size_15"
+        app:layout_constraintStart_toEndOf="@+id/txt_event_index"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Catch up with Janet" />
 
@@ -32,8 +41,9 @@
         android:layout_marginStart="@dimen/dimen_size_10"
         android:layout_marginTop="@dimen/dimen_size_5"
         android:includeFontPadding="false"
+        android:textAllCaps="false"
         android:textSize="@dimen/text_size_13"
-        app:layout_constraintStart_toEndOf="@+id/img_event"
+        app:layout_constraintStart_toEndOf="@+id/txt_event_index"
         app:layout_constraintTop_toBottomOf="@+id/txt_event_title"
         tools:text="8 - 10 am" />
 
@@ -45,7 +55,7 @@
         android:textColor="@color/greyText"
         android:textSize="@dimen/text_size_13"
         android:textStyle="italic"
-        app:layout_constraintStart_toEndOf="@+id/img_event"
+        app:layout_constraintStart_toEndOf="@+id/txt_event_index"
         app:layout_constraintTop_toBottomOf="@+id/txt_event_time"
         tools:text="Associated with Health, Walk 2000 steps" />
 
