--- a/app/src/main/res/layout/toolbar_common.xml
+++ b/app/src/main/res/layout/toolbar_common.xml
@@ -14,10 +14,11 @@
 
         <ImageView
             android:id="@+id/img_home"
-            android:src="@drawable/ic_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="start" />
+            android:layout_gravity="start"
+            android:src="@drawable/ic_back"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/txt_toolbar_title"
@@ -28,11 +29,12 @@
 
         <ImageView
             android:id="@+id/img_option"
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dimen_size_25"
+            android:layout_height="@dimen/dimen_size_25"
             android:layout_gravity="end"
-            tools:src="@drawable/ic_close" />
+            android:visibility="gone"
+            tools:src="@drawable/ic_close"
+            tools:visibility="visible" />
 
     </androidx.appcompat.widget.Toolbar>
 
