--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -54,5 +54,6 @@
     <dimen name="dimen_size_280">280dp</dimen>
     <dimen name="dimen_size_0">0dp</dimen>
     <dimen name="dimen_size_12">12dp</dimen>
+    <dimen name="dimen_size_13">13dp</dimen>
 
 </resources>
